--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@types/react-dom": "^19",
     "autoprefixer": "^10.4.20",
     "postcss": "^8.4.49",
+    "puppeteer": "^24.36.0",
     "tailwindcss": "^3.4.1",
     "typescript": "5.9.3"
   }
